<resources>
    <string name="app_name">ProfileManager</string>
    <string name="textview">TextView</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="please_enter_a_name">Please enter a name</string>
    <string name="soccer_team_manager">Soccer Team Manager</string>
    <string name="textview">TextView</string>
    <string name="open_in_google_maps">Open in Google Maps</string>
    <string name="team_name">Team Name</string>
    <string name="team_address">Team Address</string>
    <string name="please_enter_a_zip_code">Please enter a ZIP code</string>
</resources>